--- a/EcommerceProject/src/App.css
+++ b/EcommerceProject/src/App.css
@@ -68,7 +68,7 @@ body {
   flex: 1;
   height: 80%;
   width: 100%;
-  padding: 20px;
+  /* padding: 20px; */
   overflow-y: auto;
   background-color: #f5f5f5;
 }
