--- a/EcommerceProject/src/components/Banner/HeroBanner.css
+++ b/EcommerceProject/src/components/Banner/HeroBanner.css
@@ -58,16 +58,24 @@
 
 .hero-content button {
   padding: 12px 24px;
-  background-color: #007bff;
+    background: linear-gradient(
+    90deg,
+    var(--color-primary) 0%,
+    var(--color-secondary) 100%
+  );
+  color: var(--color-bg);
   border: none;
-  border-radius: 6px;
-  color: #fff;
-  font-size: 18px;
+  border-radius: 999px;
+  padding: 12px 28px;
+  font-weight: 600;
   cursor: pointer;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
-  transition: background-color 0.3s ease;
+  font-size: 1rem;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 20px rgba(59, 130, 246, 0.4);
 }
 
 .hero-content button:hover {
   background-color: #0056b3;
+  transform: translateY(-2px);
+  box-shadow: 0 8px 25px rgba(6, 182, 212, 0.5);
 }
