--- a/EcommerceProject/src/components/InfinityScrollBar/InfinityScrollBar.css
+++ b/EcommerceProject/src/components/InfinityScrollBar/InfinityScrollBar.css
@@ -57,6 +57,8 @@
     align-items: center;
     padding: 0 15px;
     width: fit-content;
+    color: black;
+    text-decoration: none;
 }
 
 .tag:hover {
